syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.greeting.model";

service GreetingService {
  rpc Greet(GreetingRequest) returns (GreetingResponse) {};
}

message GreetingRequest {
  int32 num = 1;
}

message GreetingResponse {
  string greeting = 1;
}